--- a/index.html
+++ b/index.html
@@ -1,30 +1,129 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Chat App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 600px;
+            background-color: #fff;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .chat-box {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        .chat-header {
+            background-color: #0074e4;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+
+        .chat-header h2 {
+            margin: 0;
+        }
+
+        .chat-messages {
+            flex-grow: 1;
+            overflow-y: scroll;
+            padding: 10px;
+        }
+
+        .chat-input {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            background-color: #f4f4f4;
+        }
+
+        input[type="text"] {
+            flex-grow: 1;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+
+        button {
+            background-color: #0074e4;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            outline: none;
+        }
+    </style>
+    <title>Chat App</title>
 </head>
 <body>
-  <ul id="messages"></ul>
-  <input id="messageInput" autocomplete="off" /><button onclick="sendMessage()">Send</button>
+    <div class="container">
+        <div class="chat-box">
+            <div class="chat-header">
+                <h2>Chat Room</h2>
+            </div>
+            <div class="chat-messages" id="chat-messages">
+                <!-- Chat messages will be displayed here -->
+            </div>
+            <div class="chat-input">
+                <input type="text" id="messageInput" placeholder="Type your message...">
+                <button id="sendButton">Send</button>
+            </div>
+        </div>
+    </div>
+    <script>
+        const messageInput = document.getElementById('messageInput');
+        const sendButton = document.getElementById('sendButton');
+        const chatMessages = document.getElementById('chat-messages');
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-    const socket = io();
+        // Function to append a new message to the chat window
+        function appendMessage(message) {
+            const messageElement = document.createElement('div');
+            messageElement.classList.add('message');
+            messageElement.textContent = message;
+            chatMessages.appendChild(messageElement);
+            // Scroll to the bottom of the chat window
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
 
-    function sendMessage() {
-      const message = document.getElementById('messageInput').value;
-      socket.emit('chat message', message);
-      document.getElementById('messageInput').value = '';
-    }
+        // Event listener for the send button
+        sendButton.addEventListener('click', () => {
+            const message = messageInput.value.trim();
+            if (message) {
+                // Send the message to the server (you need to implement this)
+                // For now, we'll just append the message to the chat window
+                appendMessage(`You: ${message}`);
+                messageInput.value = '';
+            }
+        });
 
-    socket.on('chat message', (msg) => {
-      const ul = document.getElementById('messages');
-      const li = document.createElement('li');
-      li.appendChild(document.createTextNode(msg));
-      ul.appendChild(li);
-    });
-  </script>
+        // Example: Receive a message from the server and display it
+        // Replace this with your actual code for receiving messages
+        setTimeout(() => {
+            const receivedMessage = 'Friend: Hello, how are you?';
+            appendMessage(receivedMessage);
+        }, 2000);
+    </script>
 </body>
 </html>
